@@ -5,11 +5,11 @@ import lombok.extern.slf4j.Slf4j;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import searchengine.config.JsoupSettings;
-import searchengine.exception.exceptions.ObjectNotFoundException;
 import searchengine.model.Site;
 import searchengine.repository.SiteRepository;
 import java.io.IOException;
 import java.time.LocalDateTime;
+import java.util.Optional;
 import java.util.concurrent.Semaphore;
 import static searchengine.model.enums.SiteStatus.FAILED;
 
@@ -24,14 +24,15 @@ public class SiteController {
     private final JsoupSettings settings;
 
     public Document accessSite(String url) throws IOException {
+
+        if (url == null) {
+            return null;
+        }
+
         try {
             semaphore.acquire();
         } catch (InterruptedException e) {
             throw new RuntimeException(e);
-        }
-
-        if (url == null) {
-            return null;
         }
 
         Document pageContent = Jsoup.connect(url)
@@ -40,33 +41,34 @@ public class SiteController {
                 .ignoreHttpErrors(true)
                 .ignoreContentType(true)
                 .followRedirects(false)
-                .timeout(10_000).get();
+                .timeout(10_000)
+                .get();
+
         try {
         Thread.sleep(1000);
-        } catch (InterruptedException exception) {
+        } catch (Exception exception) {
             exception.printStackTrace();
             this.setFailedStatus(url, exception);
         }
+
         finally {
             semaphore.release();
         }
+
         return pageContent;
     }
 
+    private void setFailedStatus(String url,
+                                 Exception exception) {
 
-    private void setFailedStatus(String url, Exception exception) {
+        Optional<Site> siteFromBd = siteRepository.findFirstByUrl(url);
+        if (siteFromBd.isPresent()) {
+            siteFromBd.get().setStatusTime(LocalDateTime.now());
+            siteFromBd.get().setLastError(String.format("При индексации сайта: %s возникла ошибка: %s", url, exception.toString()));
+            siteFromBd.get().setStatus(FAILED);
 
-        Site siteFromBd = siteRepository.findFirstByUrl(url).orElseThrow(() -> {
-
-            log.error("");
-            return new ObjectNotFoundException("сайта нет!");
-        });
-
-        siteFromBd.setStatusTime(LocalDateTime.now());
-        siteFromBd.setLastError(String.format("При индексации сайта: %s возникла ошибка: %s", url, exception.toString()));
-        siteFromBd.setStatus(FAILED);
-
-        log.info("сайт %s со статусом FAILED сохранён".formatted(url));
-        siteRepository.saveAndFlush(siteFromBd);
+            siteRepository.saveAndFlush(siteFromBd.get());
+            log.info("сайт %s со статусом FAILED сохранён".formatted(url));
+        }
     }
 }
